# litex-rusty

./: .gitignore  README.md  build-gateware.sh  litex-rusty.code-workspace
.metals/: metals.lock.db  metals.mv.db
litex-pac/: Cargo.toml
litex-pac/src/: lib.rs
litex-rusty-app/: Cargo.toml  memory.x  rust-toolchain.toml
litex-rusty-app/.cargo/: config  flash.sh
litex-rusty-app/src/: main.rs
nextpnr-hyperparam-optimizer/bench/: 0-explore-brute.sh  1-parse-results.sh  2-graph-results.sh
nextpnr-hyperparam-optimizer/bench/picorv32/: .gitignore  example.asc  nextpnr-explore.py
nextpnr-hyperparam-optimizer/bench/vexriscv_soc/: nextpnr-explore.py  soc.config  soc.lpf
