[package]
name = "litex-pac"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
critical-section = { version = "1.1", optional = true }
riscv = { version = "0.10.0", features = ["critical-section-single-hart"] }
riscv-rt = { git = "https://github.com/rust-embedded/riscv-rt.git", optional = true }
vcell = "0"

[features]
default = ["rt"]
rt = ["dep:riscv-rt"]
critical-section = ["dep:critical-section"]